--- a/src/SalonGarden.Infrastructure/SalonGarden.Infrastructure.csproj
+++ b/src/SalonGarden.Infrastructure/SalonGarden.Infrastructure.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\SalonGarden.Core\SalonGarden.Core.csproj"  />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SalonGarden.Core\SalonGarden.Core.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
