--- a/src/SalonGarden.web/SalonGarden.Web.csproj
+++ b/src/SalonGarden.web/SalonGarden.Web.csproj
@@ -7,7 +7,7 @@
 
 
   <ItemGroup>
-    <None Update="app.db" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="app.db.old" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
