--- a/src/SalonGarden.Infrastructure/SalonGarden.Infrastructure.csproj
+++ b/src/SalonGarden.Infrastructure/SalonGarden.Infrastructure.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview6.19304.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.0.0-preview6.19304.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0-preview6.19304.10" />
   </ItemGroup>
 
   <ItemGroup>
