--- a/src/SalonGarden.Tests/SalonGarden.Tests.csproj
+++ b/src/SalonGarden.Tests/SalonGarden.Tests.csproj
@@ -1,16 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="nunit" Version="3.11.0"/>
-    <PackageReference Include="NUnit3TestAdapter" Version="3.11.0"/>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
-    <PackageReference Include="Moq" Version="4.12.0"/>
-    <PackageReference Include="xunit.core" Version="2.4.1"/>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SalonGarden.Core\SalonGarden.Core.csproj"/>
+    <PackageReference Include="nunit" Version="3.11.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Moq" Version="4.12.0" />
+    <PackageReference Include="xunit.core" Version="2.4.1" />
   </ItemGroup>
 </Project>
